corrected serious bug in rotational initialization